# libsys

./: CMakeLists.txt  CMakePresets.json  Makefile  config.h.in  config.vim  error.hpp  file.hpp  fileio.hpp  mmap.hpp  signal.hpp  socket.hpp  utils.hpp
cmake/: package_add_test.cmake
include/: error.hpp  file.hpp  file_io.hpp  fileio.hpp
tests/: CMakeLists.txt  test_error.cpp  test_file_io.cpp  test_fileio.cpp  test_utils.cpp
